# KEA_System_Integration

./: README.md  package.json
Lecture_1/Lecture1_Homework/files/: denmark_info.csv  denmark_info.txt  denmark_info.xml
Lecture_1/Lecture1_Homework/scripts/: parse_with_node.js  parse_with_python.py
Lecture_1/Lecture1_Homework/scripts/node/: parse_with_node.js
Lecture_1/Lecture1_Homework/scripts/python/: parse_with_python.py
Lecture_1/Work_in_class/: stripeiframe.html
Lecture_1/Work_in_class/file_types/: me  me.csv  me.json  me.xml  me.yaml
Lecture_1/Work_in_class/modules/node/: app.js
Lecture_1/Work_in_class/modules/python/: main.py
Lecture_1/Work_in_class/scrape_webpage/: scrape.py  scrape.sh
Lecture_2/Lecture2_Homework/data_format_translation_servers/node_server/: app.js  package-lock.json  package.json  (+1 more)
Lecture_2/Lecture2_Homework/data_format_translation_servers/python_server/: parse_script.py  pyproject.toml  server.py
Lecture_2/Lecture2_Homework/data_format_translation_servers/python_server/files/: denmark_info.csv  denmark_info.yaml
Lecture_2/Lecture2_Homework/date_servers/python_server/: main.py  pyproject.toml
Lecture_2/Work_In_Class/Encoding/: encode.js
Lecture_3/Github_Webhooks/node/: app.js  package.json
Lecture_3/Github_Webhooks/python_webhooks/: main.py  pyproject.toml  webhook.py
Lecture_3/REST_API_Docs/express_swagger/: app.js  package.json
Lecture_3/REST_API_Docs/fastapi_swagger/: main.py  pyproject.toml
Lecture_4/Work_In_Class/CORS/: index.html
Lecture_5/Websockets/: index.html  new_index.html  package.json  server.js
(+28 files in other folders)
